<resources>
    <string name="app_name">HandyMap</string>
    <string name="navigation_drawer_open">Otwórz szufladę nawigacyjną</string>
    <string name="navigation_drawer_close">Zamknij szufladę nawigacyjną</string>
    <string name="nav_header_title">HandyMap</string>
    <string name="nav_header_subtitle">Aplikacja do lokalizowania miejsc na mapie</string>
    <string name="nav_tools_title">Narzędzia</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_add_category">Dodaj kategorię</string>
    <string name="action_remove_category">Usuń kategorię</string>

    <string name="mapView">Mapa</string>
    <string name="listView">Lista miejsc</string>
    <string name="galleryView">Galeria zdjęć</string>
    <string name="nearbyPlacesView">Miejsca w pobliżu</string>
    <string name="qrscannerView">Skaner QR</string>

    <string name="nfcModuleNotFound">Moduł NFC nie jest obsługiwany na tym urządzeniu</string>
    <string name="place_name">Nazwa miejsca</string>
    <string name="current_user_position">Aktualna pozycja użytkownika</string>
    <string name="osm_contributors"> © autorzy OpenStreetMap</string>
    <string name="status">Status</string>
    <string name="empty_list">Lista jest pusta</string>
    <string name="status_provider_disabled">Moduł GPS jest wyłączony</string>
    <string name="qr_read_failed">Nie udało się zeskanować kodu QR</string>
    <string name="qr_incorrect_coordinates">Nie udało się odczytać współrzędnych</string>
    <string name="qr_scan">Skanuj kod QR</string>
    <string name="dialog_question">Czy na pewno chcesz usunąć wybrane miejsce?</string>
    <string name="dialog_remove_photo_question">Czy chcesz usunąć wybrane zdjęcie?</string>
    <string name="dialog_remove_question">Wszystkie miejsca przypisane do tej kategorii zostaną usunięte</string>
    <string name="dialog_pos_text">Potwierdź</string>
    <string name="dialog_neg_text">Anuluj</string>
    <string name="text_item_removed">Element został usunięty</string>
    <string name="text_photo_saved">Zdjęcie zostało zapisane</string>
    <string name="action_search_text">Filtruj</string>
    <string name="form_location_title">Dodawanie miejsca</string>
    <string name="form_category_title">Dodawanie kategorii</string>
    <string name="form_place_name">Nazwa miejsca</string>
    <string name="form_category_name">Nazwa kategorii</string>
    <string name="form_place_desc">Opis (opcjonalnie)</string>
    <string name="form_marker_color">Kolor znacznika</string>
    <string name="form_category">Kategoria</string>
    <string name="form_switch_text">Wprowadź współrzędne ręcznie</string>
    <string name="form_lat">Szerokość geograficzna</string>
    <string name="form_lng">Długość geograficzna</string>
    <string name="form_save_text">Zapisz</string>
    <string name="form_incorrect_name">Wprowadzona nazwa jest nieprawidłowa</string>
    <string name="form_incorrect_description">Wprowadzony opis jest nieprawidłowy</string>
    <string name="form_incorrect_coordinates">Wprowadzone współrzędne są nieprawidłowe</string>
    <string name="perm_gps">Aplikacja potrzebuje uprawnień do lokalizacji</string>
    <string name="perm_storage">Aplikacja potrzebuje uprawnień do odczytu i zapisu w pamięci urządzenia</string>
    <string name="perm_camera">Aplikacja potrzebuje uprawnień do robienia zdjęć</string>
    <string name="tab_default">Domyślne</string>
    <string name="pref_center_position">Wyśrodkowanie pozycji</string>
    <string name="pref_center_position_description">Wyśrodkuj pozycję użytkownika na mapie po każdej zmianie lokalizacji</string>
    <string name="pref_coordinates">Wyświetlanie współrzędnych</string>
    <string name="pref_coordinates_description">Wyświetlaj współrzędne geograficzne miejsca po naciśnięciu na jego znacznik</string>
    <string name="pref_radius">Promień znajdowania pobliskich miejsc</string>
    <string name="pref_radius_description">Maksymalny promień do określania pobliskich miejsc w metrach</string>
    <string name="pref_refresh_time">Czas do odświeżenia stanu pozycji</string>
    <string name="pref_refresh_time_description">Minimalny odstęp czasu pomiędzy aktualizacjami stanu lokalizacji użytkownika w sekundach</string>
    <string name="pref_refresh_distance">Dystans do odświeżenia stanu pozycji</string>
    <string name="pref_refresh_distance_description">Minimalna odległość między aktualizacjami stanu lokalizacji użytkownika w metrach</string>

    <string-array name="color_array">
        <item>Niebieski</item>
        <item>Zielony</item>
        <item>Pomarańczowy</item>
        <item>Żółty</item>
        <item>Brązowy</item>
        <item>Purpurowy</item>
        <item>Czerwony</item>
    </string-array>
    

</resources>
