<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="center_user_position"
        android:title="@string/pref_center_position"
        android:summary="@string/pref_center_position_description" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="display_coordinates"
        android:title="@string/pref_coordinates"
        android:summary="@string/pref_coordinates_description" />
    <EditTextPreference
        android:defaultValue="100"
        android:key="radius"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_radius"
        android:summary="@string/pref_radius_description" />
    <EditTextPreference
        android:defaultValue="100"
        android:key="location_refresh_time"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_refresh_time"
        android:summary="@string/pref_refresh_time_description" />
    <EditTextPreference
        android:defaultValue="100"
        android:key="location_refresh_distance"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_refresh_distance"
        android:summary="@string/pref_refresh_distance_description" />
</PreferenceScreen>