<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_item"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="103"
        android:title="@string/action_search_text"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_category"
        android:orderInCategory="104"
        android:title="@string/action_add_category"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_category"
        android:orderInCategory="104"
        android:title="@string/action_remove_category"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
