<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/form_location_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_place_name" />

        <EditText
            android:id="@+id/tName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_place_desc" />

        <EditText
            android:id="@+id/tDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_marker_color" />

        <Spinner
            android:id="@+id/spPinColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:entries="@array/color_array"/>

        <Switch
            android:id="@+id/swAutoManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_switch_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manualCoordsForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_lat" />

        <EditText
            android:id="@+id/etLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_lng" />

        <EditText
            android:id="@+id/etLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/form_button_shape"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/form_save_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>