<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/form_category_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_category_name" />

        <EditText
            android:id="@+id/etCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/form_button_shape"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/form_save_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>